<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Top Movie Finder</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_sort_key">sort</string>
    <string name="pref_sort_label">Sort by</string>
    <string name="pref_sort_default">popularity</string>
    <string name="pref_sort_popularity">popularity</string>
    <string name="pref_sort_popularity_label">Popularity</string>
    <string name="pref_sort_rating">vote_average</string>
    <string name="pref_sort_rating_label">Rating</string>
    <string name="pref_favorite">favorite</string>
    <string name="pref_favorite_label">Favorite</string>
    <string name="pref_movie_ids_key">fav_movie_ids</string>
    <string name="pref_reset_label">Reset Favorite (Clear Preference/Database)</string>
    <string name="pref_reset">reset</string>
    <string name="title_activity_detail">Movie Detail</string>
    <string name="please_select_movie">Please Select a Movie</string>
    <string name="please_select_movie_desc">Please Select a Movie to view Movie Detail with Video
    Trailer and User Review</string>

    <string name="movie_overview_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
        officia deserunt mollit anim id est laborum</string>

    <string name="movie_trailer_placeholder">Official Trailer #N</string>
    <string name="movie_rating_label">User Rating: </string>
    <string name="movie_release_label">Release Date: </string>
    <string name="movie_trailers_label">Trailers: </string>
    <string name="movie_reviews_label">Reviews: </string>
    <string name="movie_review_author">Author</string>
    <string name="movie_review_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
        officia deserunt mollit anim id est laborum</string>

    <!-- No movies from TMDB -->
    <string name="empty_movies_grid">No Network connection. Movies Info Not Available</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <!-- Toast messages -->
    <string name="remove_from_watchlist_success">Movie is removed from Watchlist</string>
    <string name="remove_from_watchlist_fail">No movie removed from Watchlist</string>
    <string name="add_to_watchlist_success">The Movie is added to your Watchlist</string>
    <string name="no_network">No network connection. Please Switch to your Watchlist.</string>
    <string name="downloading_from_tmdb">Downloading from TMDB</string>
    <!-- a11y -->
    <string name="movie_title">Movie title <xliff:g id="title">%1$s</xliff:g></string>
    <string name="movie_overview">Movie overview <xliff:g id="overview">%1$s</xliff:g></string>
    <string name="movie_rating">Average User Rating of <xliff:g id="rating">%1$s</xliff:g> from 10</string>
    <string name="movie_release_date">Movie release date <xliff:g id="date">%1$s</xliff:g></string>
    <string name="movie_trailer">Movie Trailer <xliff:g id="title">%1$s</xliff:g></string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="movie_review">Movie Review by <xliff:g id="author">%1$s</xliff:g>: <xliff:g>%2$s</xliff:g></string>
</resources>

