<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:layout_margin="0dp"
    tools:context="com.ratanachai.popularmovies.DetailActivityFragment"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/movie_title"
        android:text="@string/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:textColor="#ffffffff"
        android:background="@drawable/round_corners"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:id="@+id/movie_overview"
        android:text="@string/movie_overview" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/movie_rating"
        android:text="@string/movie_rating" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/movie_release"
        android:text="@string/movie_release" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
